src/objects/CAP_User_Defined_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>lkp_CR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CR</label>
        <referenceTo>CPA_CR__c</referenceTo>
        <relationshipLabel>User Defined Attributes</relationshipLabel>
        <relationshipName>User_Defined_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_PWORF__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PWORF</label>
        <referenceTo>CPA_PWORF__c</referenceTo>
        <relationshipLabel>User Defined Attributes</relationshipLabel>
        <relationshipName>User_Defined_Attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_PWO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PWO</label>
        <referenceTo>CPA_PWO__c</referenceTo>
        <relationshipLabel>User Defined Attributes</relationshipLabel>
        <relationshipName>User_Defined_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pkl_Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Man Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty Applicable Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Avoidance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Defined Attribute</label>
    <nameField>
        <displayFormat>UDA-{0000}</displayFormat>
        <label>User Defined Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Defined Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Attribute_Type</fullName>
        <active>false</active>
        <description>Validation to restrict Attribute</description>
        <errorConditionFormula>IF(TEXT(pkl_Attribute_Type__c) = &apos;Cost&apos; , true,false)</errorConditionFormula>
        <errorMessage>Error: You selected Cost</errorMessage>
    </validationRules>
</CustomObject>